# muccheai-v3

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  debgit  deny.toml
crates/muccheai-build-verify/: Cargo.toml
crates/muccheai-build-verify/src/: lib.rs
crates/muccheai-crypto/: Cargo.toml
crates/muccheai-crypto/src/: constant_time.rs  lib.rs
crates/muccheai-federation/: Cargo.toml
crates/muccheai-federation/src/: lib.rs
crates/muccheai-mcp/: Cargo.toml
crates/muccheai-mcp/src/: client.rs  lib.rs  server.rs  transport.rs  types.rs
crates/muccheai-memory/: Cargo.toml
crates/muccheai-memory/src/: bootstrap.rs  compaction.rs  episodic.rs  index.rs  lib.rs  semantic.rs  transcript.rs
crates/muccheai-policy-engine/: Cargo.toml
crates/muccheai-policy-engine/src/: anomaly.rs  lib.rs  rules.rs
crates/muccheai-recovery/: Cargo.toml
crates/muccheai-recovery/src/: containment.rs  lib.rs
crates/muccheai-sandbox/: Cargo.toml
crates/muccheai-sandbox/src/: inference.rs  lib.rs
crates/muccheai-tool-gateway/: Cargo.toml
crates/muccheai-tool-gateway/src/: config.rs  lib.rs
crates/muccheai-tool-gateway/src/adapters/: communication.rs  data.rs  development.rs  mod.rs  system.rs  web.rs
crates/muccheai-types/: Cargo.toml
crates/muccheai-types/src/: audit.rs  capabilities.rs  crypto_primitives.rs  lib.rs  memory.rs
crates/muccheai-ui/: Cargo.toml
crates/muccheai-ui/src/: lib.rs
crates/muccheai-vault/: Cargo.toml
crates/muccheai-vault/src/: lib.rs  shamir.rs
docs/: PLUGIN_DISTRIBUTION.md
examples/plugins/weather/: Cargo.toml  plugin.toml
examples/plugins/weather/src/: lib.rs
proto/: llm_sandbox.proto  policy_engine.proto  tool_gateway.proto
src/: code_sandbox.rs  config.rs  main.rs  memory_store.rs  memory_summarizer.rs  memory_tiers.rs  notify.rs  ollama_tools.rs  pipeline.rs  structured_memory.rs  stt.rs  style.rs  users.rs  web.rs  web_search.rs
src/cli/: audit.rs  chat.rs  complete.rs  daemon.rs  doctor.rs  memory_cmd.rs  mod.rs  persona_cmd.rs  policy.rs  run.rs  setup.rs  status.rs  update.rs  vault.rs
src/plugin/: manifest.rs  mod.rs  runtime.rs
src/style/: easter_eggs.rs  mod.rs  progress.rs  risk.rs  theme.rs  words.rs
src/web/: middleware.rs  mod.rs  router.rs
src/web/static/: app.js  index.html  style.css
src/web/static/themes/: dark-chat-v4.css  dark-chat.css  glass.css  ide-v4.css  ide.css  ios-v4.css  ios.css  terminal-v4.css  terminal.css
