[package]
name = "muccheai-build-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
muccheai-types = { workspace = true }
muccheai-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
ed25519-dalek = { workspace = true }
