[package]
name = "muccheai-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
muccheai-types = { workspace = true }

ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
