[package]
name = "muccheai-federation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
muccheai-types = { workspace = true }
muccheai-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
