[package]
name = "muccheai-policy-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
muccheai-types = { workspace = true }
muccheai-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }

