[package]
name = "muccheai-recovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
muccheai-types = { workspace = true }
muccheai-crypto = { workspace = true }
muccheai-policy-engine = { workspace = true }
muccheai-sandbox = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha3 = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
zeroize = { workspace = true }
