[package]
name = "muccheai-tool-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
muccheai-types = { workspace = true }
muccheai-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
csv = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
jsonschema = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }

