[package]
name = "muccheai-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
