[package]
name = "muccheai-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
muccheai-types = { workspace = true }
muccheai-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
