[package]
name = "weather-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# The plugin SDK provides the guest-side bindings
muccheai-plugin-sdk = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
